// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`deduplicate assets with different names 1`] = `
Object {
  "code": "import png from \\"./assets/image2-479dcdf1.png\\";
import text from \\"./assets/text-6d7076f2.txt\\";
import \\"./assets/styles-fc0ceb37.css\\";

// This import should not be removed unless specified by the user or some other plugin.

var sayHi = () => {
	console.log(\\"hello\\");
};

var main = () => {
	console.log(png);
	console.log(text);
	sayHi();
};

console.log(png);
main();
",
  "filename": "index6.js",
}
`;

exports[`multiple inputs with shared chunks && output.chunkFileNames = 'chunks/sub/[name].js' 1`] = `
Object {
  "code": "import png from \\"./assets/image-0fc60877.png\\";
import text from \\"./assets/text-6d7076f2.txt\\";
import { s as sayHi } from './chunks/sub/file2.js';
import \\"./assets/styles-fc0ceb37.css\\";

var index1 = () => {
	console.log(png);
	console.log(text);
	sayHi();
};

export default index1;
",
  "filename": "index1.js",
}
`;

exports[`multiple inputs with shared chunks && output.chunkFileNames = 'chunks/sub/[name].js' 2`] = `
Object {
  "code": "import png from \\"./assets/image-0fc60877.png\\";
import text from \\"./assets/text-6d7076f2.txt\\";
import { s as sayHi } from './chunks/sub/file2.js';
import \\"./assets/styles-fc0ceb37.css\\";

var index4 = () => {
	console.log(png);
	console.log(text);
	sayHi();
};

export default index4;
",
  "filename": "index4.js",
}
`;

exports[`multiple inputs with shared chunks && output.chunkFileNames = 'chunks/sub/[name].js' 3`] = `
Object {
  "code": "import \\"../../assets/styles-fc0ceb37.css\\";

// This import should not be removed unless specified by the user or some other plugin.

var sayHi = () => {
	console.log(\\"hello\\");
};

export { sayHi as s };
",
  "filename": "chunks/sub/file2.js",
}
`;

exports[`output formats amd 1`] = `
Object {
  "code": "define([\\"./assets/image-0fc60877.png\\", \\"./assets/text-6d7076f2.txt\\", \\"./assets/styles-fc0ceb37.css\\"], function (png, text, styles_css) { 'use strict';

	function _interopDefaultLegacy (e) { return e && typeof e === 'object' && 'default' in e ? e : { 'default': e }; }

	var png__default = /*#__PURE__*/_interopDefaultLegacy(png);
	var text__default = /*#__PURE__*/_interopDefaultLegacy(text);

	// This import should not be removed unless specified by the user or some other plugin.

	var sayHi = () => {
		console.log(\\"hello\\");
	};

	var index1 = () => {
		console.log(png__default['default']);
		console.log(text__default['default']);
		sayHi();
	};

	return index1;

});
",
  "filename": "index1.js",
}
`;

exports[`output formats cjs 1`] = `
Object {
  "code": "'use strict';

var png = require(\\"./assets/image-0fc60877.png\\");
var text = require(\\"./assets/text-6d7076f2.txt\\");
require(\\"./assets/styles-fc0ceb37.css\\");

function _interopDefaultLegacy (e) { return e && typeof e === 'object' && 'default' in e ? e : { 'default': e }; }

var png__default = /*#__PURE__*/_interopDefaultLegacy(png);
var text__default = /*#__PURE__*/_interopDefaultLegacy(text);

// This import should not be removed unless specified by the user or some other plugin.

var sayHi = () => {
	console.log(\\"hello\\");
};

var index1 = () => {
	console.log(png__default['default']);
	console.log(text__default['default']);
	sayHi();
};

module.exports = index1;
",
  "filename": "index1.js",
}
`;

exports[`output formats es 1`] = `
Object {
  "code": "import png from \\"./assets/image-0fc60877.png\\";
import text from \\"./assets/text-6d7076f2.txt\\";
import \\"./assets/styles-fc0ceb37.css\\";

// This import should not be removed unless specified by the user or some other plugin.

var sayHi = () => {
	console.log(\\"hello\\");
};

var index1 = () => {
	console.log(png);
	console.log(text);
	sayHi();
};

export default index1;
",
  "filename": "index1.js",
}
`;

exports[`output formats system 1`] = `
Object {
  "code": "System.register('mybundle', [\\"./assets/image-0fc60877.png\\", \\"./assets/text-6d7076f2.txt\\", \\"./assets/styles-fc0ceb37.css\\"], function (exports) {
	'use strict';
	var png, text;
	return {
		setters: [function (module) {
			png = module.default;
		}, function (module) {
			text = module.default;
		}, function () {}],
		execute: function () {

			// This import should not be removed unless specified by the user or some other plugin.

			var sayHi = () => {
				console.log(\\"hello\\");
			};

			var index1 = exports('default', () => {
				console.log(png);
				console.log(text);
				sayHi();
			});

		}
	};
});
",
  "filename": "index1.js",
}
`;

exports[`output formats umd 1`] = `
Object {
  "code": "(function (global, factory) {
	typeof exports === 'object' && typeof module !== 'undefined' ? module.exports = factory(require(\\"./assets/image-0fc60877.png\\"), require(\\"./assets/text-6d7076f2.txt\\"), require(\\"./assets/styles-fc0ceb37.css\\")) :
	typeof define === 'function' && define.amd ? define([\\"./assets/image-0fc60877.png\\", \\"./assets/text-6d7076f2.txt\\", \\"./assets/styles-fc0ceb37.css\\"], factory) :
	(global = typeof globalThis !== 'undefined' ? globalThis : global || self, global.mybundle = factory(global.png, global.text));
}(this, (function (png, text) { 'use strict';

	function _interopDefaultLegacy (e) { return e && typeof e === 'object' && 'default' in e ? e : { 'default': e }; }

	var png__default = /*#__PURE__*/_interopDefaultLegacy(png);
	var text__default = /*#__PURE__*/_interopDefaultLegacy(text);

	// This import should not be removed unless specified by the user or some other plugin.

	var sayHi = () => {
		console.log(\\"hello\\");
	};

	var index1 = () => {
		console.log(png__default['default']);
		console.log(text__default['default']);
		sayHi();
	};

	return index1;

})));
",
  "filename": "index1.js",
}
`;

exports[`output.dir = 'sub/abcd' && output.entryFileNames = 'a/b/[name].js' && output.assetFileNames = 'assets/sub/[name]-[hash][extname]' 1`] = `
Object {
  "code": "import png from \\"../../assets/sub/image-0fc60877.png\\";
import text from \\"../../assets/sub/text-6d7076f2.txt\\";
import \\"../../assets/sub/styles-fc0ceb37.css\\";

// This import should not be removed unless specified by the user or some other plugin.

var sayHi = () => {
	console.log(\\"hello\\");
};

var index1 = () => {
	console.log(png);
	console.log(text);
	sayHi();
};

export default index1;
",
  "filename": "a/b/index1.js",
}
`;

exports[`output.dir = 'sub/abcd' && output.entryFileNames = 'a/b/[name].js' 1`] = `
Object {
  "code": "import png from \\"../../assets/image-0fc60877.png\\";
import text from \\"../../assets/text-6d7076f2.txt\\";
import \\"../../assets/styles-fc0ceb37.css\\";

// This import should not be removed unless specified by the user or some other plugin.

var sayHi = () => {
	console.log(\\"hello\\");
};

var index1 = () => {
	console.log(png);
	console.log(text);
	sayHi();
};

export default index1;
",
  "filename": "a/b/index1.js",
}
`;

exports[`output.dir = 'sub/abcd' && preserveModules = true 1`] = `
Object {
  "code": "import png from \\"../assets/image-0fc60877.png\\";
import text from \\"../assets/text-6d7076f2.txt\\";
import sayHi from '../file2.js';

var index4 = () => {
	console.log(png);
	console.log(text);
	sayHi();
};

export default index4;
",
  "filename": "sub/index4.js",
}
`;

exports[`output.dir = 'sub/abcd' && preserveModules = true 2`] = `
Object {
  "code": "import text from \\"./assets/text-6d7076f2.txt\\";
export { default } from \\"./assets/text-6d7076f2.txt\\";
",
  "filename": "file1.js",
}
`;

exports[`output.dir = 'sub/abcd' && preserveModules = true 3`] = `
Object {
  "code": "import \\"./assets/styles-fc0ceb37.css\\";

// This import should not be removed unless specified by the user or some other plugin.

var sayHi = () => {
	console.log(\\"hello\\");
};

export default sayHi;
",
  "filename": "file2.js",
}
`;

exports[`output.dir = 'sub/abcd' 1`] = `
Object {
  "code": "import png from \\"./assets/image-0fc60877.png\\";
import text from \\"./assets/text-6d7076f2.txt\\";
import \\"./assets/styles-fc0ceb37.css\\";

// This import should not be removed unless specified by the user or some other plugin.

var sayHi = () => {
	console.log(\\"hello\\");
};

var index1 = () => {
	console.log(png);
	console.log(text);
	sayHi();
};

export default index1;
",
  "filename": "index1.js",
}
`;

exports[`output.file = 'sub/abcd/out.js' && output.assetFileNames = 'assets/sub/[name]-[hash][extname]' 1`] = `
Object {
  "code": "import png from \\"./assets/sub/image-0fc60877.png\\";
import text from \\"./assets/sub/text-6d7076f2.txt\\";
import \\"./assets/sub/styles-fc0ceb37.css\\";

// This import should not be removed unless specified by the user or some other plugin.

var sayHi = () => {
	console.log(\\"hello\\");
};

var index1 = () => {
	console.log(png);
	console.log(text);
	sayHi();
};

export default index1;
",
  "filename": "out.js",
}
`;

exports[`treeshake.moduleSideEffects = false 1`] = `
Object {
  "code": "import png from \\"./assets/image-0fc60877.png\\";
import text from \\"./assets/text-6d7076f2.txt\\";

// This import should not be removed unless specified by the user or some other plugin.

var sayHi = () => {
	console.log(\\"hello\\");
};

var index1 = () => {
	console.log(png);
	console.log(text);
	sayHi();
};

export default index1;
",
  "filename": "index1.js",
}
`;
